--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
     "$schema": "https://json.schemastore.org/package.json",
     "private": true,
-    "type": "module",
+    "type": "commonjs",
     "scripts": {
         "build": "vite build",
         "dev": "vite"
     },
     "devDependencies": {
+        "@babel/core": "^7.28.0",
+        "@babel/preset-env": "^7.28.0",
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
         "@tailwindcss/vite": "^4.0.0",
         "autoprefixer": "^10.4.16",
         "axios": "^1.8.2",
+        "babel-loader": "^10.0.0",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
+        "laravel-mix": "^6.0.49",
         "postcss": "^8.4.32",
-        "tailwindcss": "^3.4.0",
-        "vite": "^6.2.4"
+        "tailwindcss": "^3.4.0"
     }
 }
